--- a/HW3_Sentiment_Analysis_Logistic_Regression.ipynb
+++ b/HW3_Sentiment_Analysis_Logistic_Regression.ipynb
@@ -8,11 +8,10 @@
    "source": [
     "# Predicting sentiment from product reviews\n",
     "\n",
-    "### The coding portion and the concept portion will be submitted on Gradescope.\n",
     "\n",
     "The goal of this first notebook is to explore logistic regression and feature engineering with sklearn.\n",
     "\n",
-    "In this notebook you will use product review data from Amazon.com to predict whether the sentiments about a product (from its reviews) are positive or negative.\n",
+    "In this notebook I will use product review data from Amazon.com to predict whether the sentiments about a product (from its reviews) are positive or negative.\n",
     "\n",
     "* Use Pandas Dataframes to do feature engineering\n",
     "* Train a logistic regression model to predict the sentiment of product reviews.\n",
@@ -21,7 +20,6 @@
     "* Given a classifier, create a confusion matrix\n",
     "* Compare multiple logistic regression models.\n",
     "\n",
-    "Copyright ©2021 Emily Fox, Hunter Schafer, Valentina Staneva.  All rights reserved.  Permission is hereby granted to students registered for University of Washington CSE/STAT 416 for use solely during Spring Quarter 2021 for purposes of the course.  No other use, copying, distribution, or modification is permitted without prior written consent. Copyrights for third-party components of this work must be honored.  Instructors interested in reusing these course materials should contact the author.\n"
    ]
   },
   {
@@ -810,7 +808,7 @@
    "source": [
     "### edTest(test_q1_majority_classifier) ###\n",
     "\n",
-    "# TODO \"Train\" a majority class classifier and calculate its validation accuracy\n",
+    "# \"Train\" a majority class classifier and calculate its validation accuracy\n",
     "majority_label = train_data['sentiment'].mode().values[0]\n",
     "majority_classifier_validation_accuracy = (validation_data['sentiment'] == majority_label).mean()\n",
     "\n",
@@ -930,7 +928,6 @@
    "source": [
     "### edTest(test_q2_most_pos_neg_words) ###\n",
     "\n",
-    "# TODO Find the most positive word and most negative word in the sentiment_model\n",
     "coefficients = sentiment_model.coef_[0]\n",
     "most_negative_index = coefficients.argmin()\n",
     "most_positive_index = coefficients.argmax()\n",
@@ -1123,7 +1120,6 @@
     "\n",
     "If there is a tie for the most positive/negative reivew, you should always grab the one that appears *first* in the validation data.\n",
     "\n",
-    "*Hint*: Once you know the index of the most positive/negative reviews, use the `.iloc[]` accessor on the DataFrame to get that row and find its `review_clean` value."
    ]
   },
   {
@@ -1259,13 +1255,7 @@
    "source": [
     "### **Question 6:** Compute confusion matrix values and plot\n",
     "\n",
-    "Write code below that uses the `plot_confusion_matrix` function to show the number of true positive, true negative, false positive, and false negative predictions made by your classifier. You should store the counts for each of these values in the variables:\n",
-    "* `tp`\n",
-    "* `fp`\n",
-    "* `fn`\n",
-    "* `tn` \n",
-    "\n",
-    "You might find it useful to use named parameters here (i.e. you can call `plot_confusion_matrix(tp=X, fp=Y, fn=A, tn=B)` instead of having to get the order of the parameters correct)"
+   
    ]
   },
   {
@@ -1327,11 +1317,7 @@
     "Before the loop, we set up `coef_table` to have the right rows and columns, but your code will need to fill out the rest.\n",
     "\n",
     "### **Question 8:** Train and Validation Accuracies\n",
-    "Similar to Q7, we want you to compute the training and validation accuracy for each learned predictor and store that in a `DataFrame` called `accuracies_table`. \n",
-    "\n",
-    "You should end up with a `DataFrame` with column names `'l2_penalty', 'train_accuracy', 'validation_accuracy'` and a row for each L2 penalty tried. The L2 penaly should be the number (not the column name from Q7) and the accuracy values should be numbers between 0 and 1 for the appropriate accuracy.\n",
-    "\n",
-    "For this problem, we recommend the approach used in HW2 to build up a list of dictionaries, and then convert that to a `DataFrame` with the values described.\n",
+   
     "\n",
     "### Implementation Details\n",
     "\n",
@@ -1345,9 +1331,7 @@
     "\n",
     "  Confusingly this grabs all the coefficients and treats them like a list of numbers rather than the 2D array of rows/columns that scikit-learn originally provides.\n",
     "\n",
-    "* It is okay if your code prints `ConvergenceWarnings`. This is something you would want to avoid in practice but is okay in our assignment for simplicity.\n",
     "\n",
-    "* We recommend just focusing on Q7 at first and getting the code to set up the coefficients table right. Then once that's working, evaluate the models for Q8.\n"
    ]
   },
   {
@@ -1375,7 +1359,6 @@
    "source": [
     "### edTest(test_q7_q8_train_models) ###\n",
     "\n",
-    "# TODO Fill in the loop below\n",
     "\n",
     "# Set up the regularization penalities to try\n",
     "l2_penalties = [0.01, 1, 4, 10, 1e2, 1e3, 1e5]\n",
@@ -1390,14 +1373,13 @@
     "accuracy_data = []\n",
     "\n",
     "for l2_penalty, l2_penalty_column_name in zip(l2_penalties, l2_penalty_names):\n",
-    "    # TODO(Q7 and Q8): Train the model \n",
+    "    # Train the model \n",
     "    model = LogisticRegression(penalty='l2', random_state=1, C=1/l2_penalty, fit_intercept=False)\n",
     "    model.fit(train_data[features], train_data['sentiment'])\n",
     "    \n",
-    "    # TODO(Q7): Save the coefficients in coef_table\n",
+    "    # Save the coefficients in coef_table\n",
     "    coef_table[l2_penalty_column_name] = model.coef_[0]\n",
     "\n",
-    "    # TODO(Q8): Calculate and save the train and validation accuracies\n",
     "    train_accuracy = model.score(train_data[features], train_data['sentiment'])\n",
     "    validation_accuracy = model.score(validation_data[features], validation_data['sentiment'])\n",
     "    accuracy_data.append({'l2_penalty': l2_penalty, 'train_accuracy': train_accuracy, 'validation_accuracy': validation_accuracy})\n",
@@ -1754,7 +1736,6 @@
     "This means your result for each one of these variables should be a `Series` of length 5 for the respective words.\n",
     "\n",
     "\n",
-    "*Hint:* You can use the `.nlargest()` and `.nsmallest()` method on an DataFrame to find the top `n` rows sorted according to the value of a specified column."
    ]
   },
   {
