--- a/HW3_Sentiment_Analysis_Logistic_Regression.ipynb
+++ b/HW3_Sentiment_Analysis_Logistic_Regression.ipynb
@@ -1748,7 +1748,7 @@
    "source": [
     "### edTest(test_q9_most_positive_negative) ###\n",
     "\n",
-    "# TODO Compute words with the 5 largest coefficients and 5 smallest coefficients\n",
+    "# Compute words with the 5 largest coefficients and 5 smallest coefficients\n",
     "positive_words = coef_table[['word', 'coefficients [L2=1e+00]']].nlargest(5, 'coefficients [L2=1e+00]')['word']\n",
     "negative_words = coef_table[['word', 'coefficients [L2=1e+00]']].nsmallest(5, 'coefficients [L2=1e+00]')['word']"
    ]
