--- a/Sentiment_Analysis_Logistic_Regression.ipynb
+++ b/Sentiment_Analysis_Logistic_Regression.ipynb
@@ -782,7 +782,7 @@
     "\n",
     "To \"train\" the majority class classifier, you should simply find the most frequent target in the training data.\n",
     "\n",
-    "### **Question 1:** Majority class classifier\n",
+    "### Majority class classifier\n",
     "* Compute the most frequent label and store it in a variable called `majority_label`.\n",
     "* What is the validation accuracy of the majority class classifer. Store your result as a number between 0 and 1 in a variable called `majority_classifier_validation_accuracy`.\n",
     "  \n",
@@ -891,7 +891,7 @@
     "id": "ihGKU_-9TI6Q"
    },
    "source": [
-    "### **Question 2:** Most Positive/Negative Word\n",
+    "### Most Positive/Negative Word\n",
     "For the sentiment model we trained above, compute the word with the most negative weight and the word with the most positive weight.\n",
     "\n",
     "Store your results in the variables `most_negative_word` and `most_positive_word`.\n",
@@ -1105,7 +1105,7 @@
     "id": "l2Jy9HpcTI6R"
    },
    "source": [
-    "### **Question 3:** Find the most positive (and negative) review"
+    "### Find the most positive (and negative) review"
    ]
   },
   {
@@ -1150,7 +1150,7 @@
    "source": [
     "Do you notice something special about those reviews? They are both pretty long! Here we just count number of words regardless of the length of the review but clearly that can affect the results, and in practice one can use some techniques to normalize the counts to avoid prioritizing long reviews over shorter ones (we will discuss this idea in a future week).\n",
     "\n",
-    "### **Question 4:** Compute validation accuracy\n",
+    "### Compute validation accuracy\n",
     "Compute the validation accuracy for the model we just trained. Report the validationaccuracy as a number between 0 and 1 stored in a variable called `sentiment_model_validation_accuracy`.\n",
     "\n",
     "Below, calculate the accuracy of the predictor using sklearn's [accuracy_score](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.accuracy_score.html) function."
@@ -1188,7 +1188,7 @@
     "id": "7RlNsJOxTI6S"
    },
    "source": [
-    "### **Question 5**: Which model?\n",
+    "###  Which model?\n",
     "Compare the validation accuracy for this problem with the validation accuracy of the baseline majority class classifier. Which model would you predict will peform better in the future? \n",
     "\n",
     "* If you think the majority class classifier would do better, write `q5 = 'majority_class_classifier'`.\n",
@@ -1208,7 +1208,7 @@
    "source": [
     "### edTest(test_q5_which_model) ###\n",
     "\n",
-    "# Answer the question posed above.\n",
+    "# .\n",
     "q5 = 'sentiment_model'"
    ]
   },
@@ -1254,7 +1254,7 @@
     "id": "OdrhEeDMTI6T"
    },
    "source": [
-    "### **Question 6:** Compute confusion matrix values and plot\n",
+    "###  Compute confusion matrix values and plot\n",
     "\n",
     "Write code below that uses the `plot_confusion_matrix` function to show the number of true positive, true negative, false positive, and false negative predictions made by your classifier. You should store the counts for each of these values in the variables:\n",
     "* `tp`\n",
@@ -1300,7 +1300,7 @@
     "id": "r39NSgBqTI6T"
    },
    "source": [
-    "## **Question 7 and 8:** Logistic Regression with L2 regularization\n",
+    "##  Logistic Regression with L2 regularization\n",
     "\n",
     "One of the challenges of creating features from each word is that there are many more features than observations. It is easy to overfit. We will explore the effect of the regularization in this problem.\n",
     "\n",
@@ -1314,7 +1314,7 @@
     "\n",
     "We recommend focusing on the value you need to compute for Q7 and then once you have that working work on the code you need to compute Q8.\n",
     "\n",
-    "### **Question 7:** Coefficient Paths\n",
+    "### Coefficient Paths\n",
     "For this question we will ask you to compute the coefficent path for each of the features in the model for various values of the regularization constant.\n",
     "\n",
     "For each regularization strength, train a model using that regularization constant and compute table storing the coefficients of each learned predictor. Store the results in a `DataFrame` named `coef_table`.\n",
@@ -1323,8 +1323,8 @@
     "\n",
     "Before the loop, we set up `coef_table` to have the right rows and columns, but your code will need to fill out the rest.\n",
     "\n",
-    "### **Question 8:** Train and Validation Accuracies\n",
-    "Similar to Q7, we want you to compute the training and validation accuracy for each learned predictor and store that in a `DataFrame` called `accuracies_table`. \n",
+    "###  Train and Validation Accuracies\n",
+    "Compute the training and validation accuracy for each learned predictor and store that in a `DataFrame` called `accuracies_table`. \n",
     "\n",
     "You should end up with a `DataFrame` with column names `'l2_penalty', 'train_accuracy', 'validation_accuracy'` and a row for each L2 penalty tried. The L2 penaly should be the number (not the column name from Q7) and the accuracy values should be numbers between 0 and 1 for the appropriate accuracy.\n",
     "\n",
@@ -1377,11 +1377,11 @@
     "l2_penalty_names = [f'coefficients [L2={l2_penalty:.0e}]' \n",
     "                    for l2_penalty in l2_penalties]\n",
     "\n",
-    "# Q7: Add the coefficients to this coef_table for each model\n",
+    "# Add the coefficients to this coef_table for each model\n",
     "coef_table = pd.DataFrame(columns=['word'] + l2_penalty_names)\n",
     "coef_table['word'] = features\n",
     "\n",
-    "# Q8: Set up an empty list to store the accuracies (will convert to DataFrame after loop)\n",
+    "# Set up an empty list to store the accuracies (will convert to DataFrame after loop)\n",
     "accuracy_data = []\n",
     "\n",
     "for l2_penalty, l2_penalty_column_name in zip(l2_penalties, l2_penalty_names):\n",
@@ -1738,7 +1738,7 @@
     "id": "LyRB6L8ITI6U"
    },
    "source": [
-    "## **Question 9:** Inspect Coefficients\n",
+    "##  Inspect Coefficients\n",
     "\n",
     "We'll now look at the **coefficients** for the model that were trained above. We will create a table of features and learned coefficients associated with each of the different L2 penalty values.\n",
     "\n",
